--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ p, a {
             border-radius: 0.3rem;
         }
         .bg:hover {
-            color: black;
+            color: hsl(0, 0%, 20%);
             background-color: hsl(75, 94%, 57%);
         }
         
